# vector-db-test

./: .gitignore  __main__.py  evaluate-db.py  metrics.ipynb  pyproject.toml  quadrant.py  sample.json  transcript.py
Results/LLM-testing/Medium-articles-training/llama3-8b/: info.txt  llama3-critic-contexts-comparison.json  result.csv  sample.json
Results/LLM-testing/Medium-articles-training/mistral-7b/: result.csv  sample.json
Results/LLM-testing/Medium-articles-training/phi3-medium/: ragas-metrics-data-phi3:medium.csv  ragas-metrics-data-phi3:medium.json
Results/LLM-testing/Research Papers/result-1/: sample-1.json
Results/LLM-testing/Research Papers/result-3/: info.txt  result-3.csv
Results/LLM-testing/Research Papers/result-4/: info.txt  result-4.csv
Results/LLM-testing/result-1/: info.txt  result-1.csv
Results/LLM-testing/result-2/: info.txt  result-2.csv  sample-2.json
Results/LLM-testing/result-3/: sample.json
Results/LLM-testing/result-4/: sample.json
Results/result-1/: result-1.csv
Results/result-2/: result-2.csv  sample.json
references/: Building a search engine for interactive search.txt  Building a write intensive DB and impact of different file systems on it.txt  Shipping LLM Addressing Production Challenges.txt
references/dev-day-transcripts/:  Understanding the internal workings of databases.txt  Bootstrapping Kubernetes.txt  Data Science in e-Commerce.txt  LLMs in action: Strategies for crafting solutions.txt  Uncover the mysteries of Infrastructure as code.txt  Understanding the internal workings of databases.txt
