[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Harshit Mishra <harshitm@sahaj.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
langchain-chroma = "^0.1.2"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
pypdf = "^4.3.1"
sentence-transformers = "^3.0.1"
trulens-eval = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
