[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Harshit Mishra <harshitm@sahaj.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
langchain-chroma = "^0.1.2"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
pypdf = "^4.3.1"
sentence-transformers = "^3.0.1"
trulens-eval = "^0.33.0"
datasets = "^2.20.0"
ragas = "^0.1.11"
langchain-qdrant = "^0.1.3"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
